# Langraph_Course

./: pyproject.toml  requirements.txt
scripts/: simple_chatbot.ipynb
scripts/Chain vs Graph/: difference.ipynb
scripts/chatbot_variants/b_with_streaming/: backend.py  frontend.py  learning_concepts.md
scripts/chatbot_variants/c_with_resume_chat/: frontend.py
scripts/chatbot_variants/simple_chat_with UI/: frontend.py
scripts/chatbot_variants/with_streaming/: frontend_streaming.py
scripts/conditional_workflows/: quadratic_simple.ipynb  review_response.ipynb
scripts/iterative_workflows/: tweet_generator.ipynb
scripts/parallel_workflows/: no_llm.ipynb  with_llm.ipynb
scripts/persistant_chatbot/: simple_chatbot.ipynb
scripts/sequential_workflows/: prompt_chaining.ipynb  simple_syntax.ipynb  simple_with_llm.ipynb
