[project]
name = "langraph-course"
version = "0.1.0"
description = ""
authors = [
    {name = "Muhammad-Bilal1605",email = "zaheermbilal1605@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "jupyterlab (>=4.5.6,<5.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langgraph (>=1.1.4,<2.0.0)",
    "langchain (>=1.2.14,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "streamlit (>=1.56.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
